[gd_scene load_steps=2 format=2]

[ext_resource path="res://areas/detect_range.gd" type="Script" id=1]

[node name="LiveStockDetectRange" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.937255, 0.227451, 0.227451, 1 )

[node name="DetectTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_DetectRange_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_LiveStockDetectRange_body_exited"]
